# advent

./: .gitignore  .gitlab-ci.yml  README.md  advent.py  day1.py  day10.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  dispatch.py  pyproject.toml
.github/workflows/: build.yaml
advent/: advent.py  calendar.py  day.py  template.py
advent/advent2015/: __init__.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
days/: __init__.py  day1.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day6.py  day7.py  day9.py
inputs/: day12input.json  inputs.py
test/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/: test_2015day1.py  test_2015day10.py  test_2015day11.py  test_2015day12.py  test_2015day13.py  test_2015day14.py  test_2015day2.py  test_2015day3.py  test_2015day4.py  test_2015day5.py  test_2015day6.py  test_2015day7.py  test_2015day8.py  test_2017day1.py  test_2017day2.py  test_2017day3.py  test_2017day4.py  test_2017day5.py  test_2018day1.py  test_2018day2.py  test_2018day3.py  test_2020day1.py  test_2020day2.py  test_2020day3.py  test_2021day1.py  test_2021day2.py  test_2022day1.py  test_2022day2.py  test_2022day3.py  test_2022day4.py  test_2023day1.py  test_2024day1.py  test_day.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day2.py  (+6 more)
(+34 files in other folders)
