[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Advent of Code"
version = "0.0.1"
description = "Solutions to Advent of Code: https://adventofcode.com"
authors = ["Chris Erwin <crerwin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
pytest = "*"
flake8 = "^3.8.4"
