[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "advent"
version = "0.0.1"
description = "Solutions to Advent of Code: https://adventofcode.com"
authors = ["Chris Erwin <crerwin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
jinja2 = "^3.1.2"

[tool.poetry.scripts]
advent = "advent.advent:advent"

[tool.poetry.group.dev.dependencies]
black = {version = "*", allow-prereleases = true}
pytest = "*"
flake8 = "^3.8.4"
pytest-xdist = "^2.5.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
markers = [
    "day: Integration test of Day objects with real input"
]